<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.mafrans</groupId>
    <artifactId>poppo</artifactId>
    <version>1.6</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>central</id>
            <name>bintray</name>
            <url>http://jcenter.bintray.com</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
        <dependency>
            <groupId>com.github.adamint</groupId>
            <artifactId>java-discord-authenticator</artifactId>
            <version>5c2f7f3f76</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.23</version>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-kgsearch</artifactId>
            <version>v1-rev230-1.25.0</version>
        </dependency>
        <dependency>
            <groupId>com.asm</groupId>
            <artifactId>asm</artifactId>
            <version>1.0.1</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/asm-1.0.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/commons-io-2.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache</groupId>
            <artifactId>commons-lang</artifactId>
            <version>3.6</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/commons-lang3-3.6 (1).jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-youtube</artifactId>
            <version>v3-rev206-1.25.0</version>
        </dependency>
        <!--dependency>
            <groupId>com.google</groupId>
            <artifactId>google-api-services-oauth</artifactId>
            <version>1.23.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/google-api-services-oauth2-v1-rev141-1.23.0.jar</systemPath>
        </dependency-->
        <dependency>
            <groupId>com.google</groupId>
            <artifactId>google-http-client</artifactId>
            <version>1.22.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/google-http-client-1.22.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.25.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jscience/jscience -->
        <dependency>
            <groupId>org.jscience</groupId>
            <artifactId>jscience</artifactId>
            <version>4.3.1</version>
        </dependency>

        <!--dependency>
            <groupId>com.google</groupId>
            <artifactId>google-oauth-client</artifactId>
            <version>1.22.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/google-oauth-client-1.22.0.jar</systemPath>
        </dependency-->
        <dependency>
            <groupId>com.google</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/gson-2.8.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>java-prettify</groupId>
            <artifactId>prettify</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/java-prettify.jar</systemPath>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>com.sedmelluq</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>1.3.10</version>
        </dependency>
        <dependency>
            <groupId>com.httprequest</groupId>
            <artifactId>http-request</artifactId>
            <version>6.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/http-request-6.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>jda</artifactId>
            <version>3.3.0_260</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/JDA-3.8.1_448.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20160810</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/json-20160810.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json-path</artifactId>
            <version>2.4.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/json-path-2.4.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.2.1</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/json-smart-2.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.12.12</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/lombok-1.16.12.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.jhlabs</groupId>
            <artifactId>jhlabs-image</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/Filters.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>me.mafrans</groupId>
            <artifactId>mahttpd</artifactId>
            <version>1.1</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/MaHTTPD.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>me.mafrans</groupId>
            <artifactId>javadins</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/Javadins.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>me.mafrans</groupId>
            <artifactId>smiteforge</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/smiteforge.jar</systemPath>
        </dependency>
        <dependency>
            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.11.3</version>
        </dependency>
        <dependency>
            <groupId>com.neovisionaries</groupId>
            <artifactId>nv-websocket-client</artifactId>
            <version>2.3</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/nv-websocket-client-2.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>3.9.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/okhttp-3.9.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.squareup.okio</groupId>
            <artifactId>okio</artifactId>
            <version>1.13.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/okio-1.13.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/slf4j-api-1.7.25.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.mrpowergamerbr</groupId>
            <artifactId>temmiediscordauth</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/TemmieDiscordAuth.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.trove4j</groupId>
            <artifactId>trove4j</artifactId>
            <version>3.0.3</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/trove4j-3.0.3.jar</systemPath>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.sql2o/sql2o -->
        <dependency>
            <groupId>org.sql2o</groupId>
            <artifactId>sql2o</artifactId>
            <version>1.5.4</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>16.0.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>